--- a/.classpath
+++ b/.classpath
@@ -2,12 +2,14 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/JavaProjects/SpringLab/springPro/lib/aopalliance-1.0.jar"/>
-	<classpathentry kind="lib" path="C:/JavaProjects/SpringLab/springPro/lib/commons-logging-1.1.3.jar"/>
-	<classpathentry kind="lib" path="C:/JavaProjects/SpringLab/springPro/lib/spring-aop-4.0.4.RELEASE.jar"/>
-	<classpathentry kind="lib" path="C:/JavaProjects/SpringLab/springPro/lib/spring-beans-4.0.4.RELEASE.jar"/>
-	<classpathentry kind="lib" path="C:/JavaProjects/SpringLab/springPro/lib/spring-context-4.0.4.RELEASE.jar"/>
-	<classpathentry kind="lib" path="C:/JavaProjects/SpringLab/springPro/lib/spring-core-4.0.4.RELEASE.jar"/>
-	<classpathentry kind="lib" path="C:/JavaProjects/SpringLab/springPro/lib/spring-expression-4.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/aopalliance-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/spring-aop-4.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-beans-4.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-context-4.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-core-4.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-expression-4.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/aspectjweaver-1.7.4.jar"/>
+	<classpathentry kind="lib" path="lib/javax.inject-1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
